force-app/main/default/objects/Counselling_Prerequisite__c/Counselling_Prerequisite__c.object-meta.xml
<CustomObject>
    <description>Optional checklist before counselling (documents / steps).</description>
    <label>Counselling Prerequisite</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Counselling Prerequisite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Counselling Prerequisites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>