force-app/main/default/objects/Counselling_Prerequisite__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Type of document or step.</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ID_Card</fullName>
                <label>ID</label>
            </value>
            <value>
                <fullName>Insurance_Card</fullName>
                <label>Insurance card</label>
            </value>
            <value>
                <fullName>Consent</fullName>
            </value>
            <value>
                <fullName>Lab_Report</fullName>
                <label>Lab report</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>