force-app/main/default/objects/Counselling_Prerequisite__c/fields/Due_Before__c.field-meta.xml
<CustomField>
    <fullName>Due_Before__c</fullName>
    <description>Optional deadline before the session.</description>
    <label>Due Before</label>
    <type>DateTime</type>
</CustomField>