force-app/main/default/objects/Counselling_Prerequisite__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, show as mandatory before counselling.</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>