force-app/main/default/objects/Counselling_Prerequisite__c/fields/Is_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>Is_Satisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when uploaded or verified.</description>
    <label>Is Satisfied</label>
    <type>Checkbox</type>
</CustomField>