force-app/main/default/objects/Counselling_Prerequisite__c/fields/Linked_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Linked_File_Id__c</fullName>
    <description>Optional ContentDocument Id for uploaded proof.</description>
    <label>Linked File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>