force-app/main/default/objects/Counselling_Prerequisite__c/fields/Related_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Related_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service appointment this prerequisite belongs to.</description>
    <label>Related Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Counselling Prerequisites</relationshipLabel>
    <relationshipName>Counselling_Prerequisites</relationshipName>
    <type>Lookup</type>
</CustomField>